--- a/index.html
+++ b/index.html
@@ -1,16 +1,223 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie-edge">
-
-	<link rel="stylesheet" href="build/tailwind.css">
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie-edge">
+		<link rel="stylesheet" href="build/tailwind.css">
 		<link rel="stylesheet" href="https://use.typekit.net/ggk0vlq.css">
 		<link rel="stylesheet" href="build/main.css">
 		<title> DeFi Design Kit</title>
 		<link rel="icon" href="img/plant.png" type="image/x-icon" />
+		
 	</head>
-	<body>
+	<body class="">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css" integrity="sha256-x8PYmLKD83R9T/sYmJn1j3is/chhJdySyhet/JuHnfY=" crossorigin="anonymous" />
+		<style>
+		/* navigation
+		- show navigation always on the large screen devices with (min-width:1024)
+		*/
+		@media (min-width: 1024px) {
+		.top-navbar {
+		display: inline-flex !important;
+		}
+		</style>
+		<nav class="flex items-center bg-gray-800 p-3 flex-wrap">
+			<a href="#" class="p-2 mr-4 inline-flex items-center">
+				<span class="text-xl text-white font-bold uppercase tracking-wide"
+				>DeFi Design Kit</span
+				>
+			</a>
+			<button
+			class="text-white inline-flex p-3 hover:bg-gray-900 rounded lg:hidden ml-auto hover:text-white outline-none nav-toggler"
+			data-target="#navigation"
+			>
+			<i class="material-icons">menu</i>
+			</button>
+			<div
+				class="hidden top-navbar w-full lg:inline-flex lg:flex-grow lg:w-auto"
+				id="navigation"
+				>
+				<div
+					class="lg:inline-flex lg:flex-row lg:ml-auto lg:w-auto w-full lg:items-center items-start  flex flex-col lg:h-auto"
+					>
+					<a
+						href="#"
+						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+						>
+						<span>Home</span>
+					</a>
+					<a
+						href="#"
+						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+						>
+						<span>Navigation</span>
+					</a>
+					<a
+						href="#"
+						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+						>
+						<span>Typography</span>
+					</a>
+					<a
+						href="#"
+						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+						>
+						<span>Analytics</span>
+					</a>
+					<a
+						href="#"
+						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+						>
+						<span>Icons</span>
+					</a>
+					<a
+						href="#"
+						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+						>
+						<span>Forms</span>
+					</a>
+					<a
+						href="#"
+						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+						>
+						<span>Buttons</span>
+					</a>
+					<a
+						href="#"
+						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+						>
+						<span>Alerts</span>
+					</a>
+				</div>
+			</div>
+		</nav>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
+		<script>
+		$(document).ready(function() {
+		$(".nav-toggler").each(function(_, navToggler) {
+		var target = $(navToggler).data("target");
+		$(navToggler).on("click", function() {
+		$(target).animate({
+		height: "toggle"
+		});
+		});
+		});
+		});
+		</script>
+		<div id="main-content" class="p-10 text-center">
+			<h1 class="text-5xl text-gray-700 pt-10"> Visual Components for creating DeFi applications </h1>
+		</div>
+		<!---------END NAVIGATION ---------->
+		<!--------------- Modern Alert --------------->
+		<div class="text-center py-4 lg:px-4 d-inline-block">
+			<div class="p-2 bg-green-800 items-center text-indigo-100 leading-none lg:rounded-full flex lg:inline-flex" role="alert">
+				<span class="flex rounded-full bg-green-500 uppercase px-2 py-1 text-xs font-bold mr-3">New</span>
+				<span class="font-semibold mr-2 text-left flex-auto">Join The Discord</span>
+				<svg class="fill-current opacity-75 h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M12.95 10.707l.707-.707L8 4.343 6.586 5.757 10.828 10l-4.242 4.243L8 15.657l4.95-4.95z"/></svg>
+			</div>
+		</div>
+		<!--------------- New Label --------------->
+		<div class="text-center py-4 lg:px-4 inline-block">
+			<span class="flex rounded-full bg-green-500 text-white uppercase px-2 py-1 text-xs font-bold mr-3">New</span>
+		</div>
+
+		<!--------------- Pill Button  --------------->
+		<button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full">
+		Button
+		</button>
+		<!--------------- 3d Button  --------------->
+		<button class="bg-green-500 hover:bg-green-400 text-white font-bold py-2 px-4 border-b-4 border-green-700 hover:border-green-500 rounded">
+		Button
+		</button>
+		<!--------------- Button Groups  --------------->
+		<div class="inline-flex">
+			<button class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-l">
+			Prev
+			</button>
+			<button class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-r">
+			Next
+			</button>
+		</div>
+
+		<!--------------- Button with Icons --------------->
+		<button class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded inline-flex items-center">
+		<svg class="fill-current w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M13 8V2H7v6H2l8 8 8-8h-5zM0 18h20v2H0v-2z"/></svg>
+		<span>Download</span>
+		</button>
+
+
+<!--------------- Progress Bars --------------->
+<div class="pt-10 flex flex-col space-y-3 h-32">
+  <div class="relative w-full sm:w-1/2 bg-gray-200 rounded">
+    <div style="width: 60%" class="absolute top-0 h-4 rounded shim-green"></div>
+  </div>
+ 
+  <div class="relative w-full sm:w-1/2 bg-gray-200 rounded">
+    <div style="width: 80%" class="absolute top-0 h-4 rounded shim-blue"></div>
+  </div>
+
+  <div class="relative w-full sm:w-1/2 bg-gray-200 rounded">
+    <div style="width: 100%" class="absolute top-0 h-4 rounded shim-red"></div>
+  </div>
+</div>
+
+
+<!------------ code snippet for progress bars --------------->
+<div class="w-1/3">
+  <div class="coding inverse-toggle p-3 shadow-lg text-gray-700 text-sm font-mono subpixel-antialiased
+    bg-gray-200 rounded-lg leading-normal overflow-hidden">
+    <p class="text-green-400 w-full">progress bars</p>
+    <div class="flex">
+ 
+        <script type="text/plain"  style="display: block">
+
+        <div class="relative w-full sm:w-1/2 bg-gray-200 rounded">
+          <div style="width: 100%" class="absolute top-0 h-4 rounded shim-red"></div>
+        </div>
+        </script>
+      </code>
+    </div>
+  </div>
+
+
+
+
+<h4 class="pt-3"> Navigation </h4>
+<h3><a href="components/navigation.html">navigation </a></h3>
+<h3><a href="components/dark-nav.html">dark nav </a></h3>
+<h3><a href="components/breadcrumbs.html">bread crumbs </a></h3>
+
+<h4 class="pt-3"> Cards & Charts </h4>
+<h3><a href="components/stock-chart.html">Stock Chart </a></h3>
+<h3><a href="components/statistic-cards.html">Statistic Cards </a></h3>
+<h3><a href="components/dashboard-statistic.html">dashboard statistics </a></h3>
+<h3><a href="components/analytics-cards.html">analytics cards </a></h3>
+
+<h4 class="pt-3"> Forms </h4>
+<h3><a href="components/text-inputs.html"> Text Inputs</a></h3>
+<h3><a href="components/search-input.html">search input </a></h3>
+<h3><a href="components/datepicker.html">datepicker </a></h3>
+
+<h4 class="pt-3"> Buttons </h4>
+<h3><a href="components/tags.html">Tags </a></h3>
+<h3><a href="components/switch.html">Switch </a></h3>
+
+<h4 class="pt-3"> Alerts </h4>
+<h3><a href="components/list-items.html">list items </a></h3>
+<h3><a href="components/notifications.html">notifications </a></h3>
+
+<h4 class="pt-3"> Misc </h4>
+<h3><a href="components/modal.html">modal </a></h3>
+<h3><a href="components/wireframe.html">Wireframe </a></h3>
+<h3><a href="components/terminal.html">Terminal </a></h3>
+
+
+
+
+
+
+
+
 	</body>
-	</html>
+</html>
