--- a/index.html
+++ b/index.html
@@ -42,49 +42,49 @@
 					class="lg:inline-flex lg:flex-row lg:ml-auto lg:w-auto w-full lg:items-center items-start  flex flex-col lg:h-auto"
 					>
 					<a
-						href="#"
+						href="./index.html"
 						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
 						<span>Home</span>
 					</a>
 					<a
-						href="#"
+						href="./navigation.html"
 						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
 						<span>Navigation</span>
 					</a>
 					<a
-						href="#"
+						href="./typography.html"
 						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
 						<span>Typography</span>
 					</a>
 					<a
-						href="#"
+						href="./analytics.html"
 						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
 						<span>Analytics</span>
 					</a>
 					<a
-						href="#"
+						href="./icons.html"
 						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
 						<span>Icons</span>
 					</a>
 					<a
-						href="#"
+						href="./forms.html"
 						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
 						<span>Forms</span>
 					</a>
 					<a
-						href="#"
+						href="./buttons.html"
 						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
 						<span>Buttons</span>
 					</a>
 					<a
-						href="#"
+						href="./alerts.html"
 						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
 						<span>Alerts</span>
@@ -105,10 +105,8 @@
 		});
 		});
 		</script>
-		<div id="main-content" class="p-10 text-center">
-			<h1 class="text-5xl text-gray-700 pt-10"> Visual Components for creating DeFi applications </h1>
-		</div>
 		<!---------END NAVIGATION ---------->
+	
 		<!--------------- Modern Alert --------------->
 		<div class="text-center py-4 lg:px-4 d-inline-block">
 			<div class="p-2 bg-green-800 items-center text-indigo-100 leading-none lg:rounded-full flex lg:inline-flex" role="alert">
