--- a/buttons.html
+++ b/buttons.html
@@ -107,7 +107,7 @@
 		</script>
 		<!---------END NAVIGATION ---------->
 		<div id="main-content" class="p-10 text-center">
-			<h1 class="text-5xl text-gray-700 pt-10"> Typography Components</h1>
+			<h1 class="text-5xl text-gray-700 pt-10"> Buttons Components</h1>
 		</div>
 
 
