--- a/typography.html
+++ b/typography.html
@@ -108,6 +108,23 @@
 		<!---------END NAVIGATION ---------->
 		<div id="main-content" class="p-10 text-center">
 			<h1 class="text-5xl text-gray-700 pt-10"> Typography Components</h1>
+
+			<div class="font-1">
+			<p> A quick brown fox jumps over the lazy dog </p>
+			<h4> A quick brown fox jumps over the lazy dog </h4>
+			<h3> A quick brown fox jumps over the lazy dog </h3>
+			<h2> A quick brown fox jumps over the lazy dog </h2>
+			<h1> A quick brown fox jumps over the lazy dog </h1>
+		</div>
+		<div class="font-2">
+			<p class=""> A quick brown fox jumps over the lazy dog </p>
+			<h4> A quick brown fox jumps over the lazy dog </h4>
+			<h3> A quick brown fox jumps over the lazy dog </h3>
+			<h2> A quick brown fox jumps over the lazy dog </h2>
+			<h1> A quick brown fox jumps over the lazy dog </h1>
+		</div>
+
+
 		</div>
 
 
