--- a/navigation.html
+++ b/navigation.html
@@ -110,9 +110,8 @@
 		<div id="main-content" class="p-10 text-center">
 			<h1 class="text-5xl text-gray-700 pt-10"> Navigation Components </h1>
 		</div>
-<div class="flex flex-wrap">
 
-		<!---- Light Navigation -->
+		<!---- Start Sidebar Light Navigation -->
     <div class="flex items-center justify-left bg-gray-100 py-6">
 		<div class="flex w-full max-w-xs p-4 bg-white">
 			<ul class="flex flex-col w-full">
@@ -282,10 +281,10 @@
 			</ul>
 		</div>
 	</div>
-<!---- End Light navigation ---->
+<!---- End Light Sidebar Navigation ---->
 
-<!--- Terminal Start-->
-<div class="w-3/4 h-64 overflow-scroll">
+<!--- Terminal: Light Sidebar Navigation Start---->
+<div class="w-1/2 h-32 block overflow-scroll mx-20 ">
   <div class="coding inverse-toggle px-5 pt-4 shadow-lg text-gray-100 text-sm font-mono subpixel-antialiased 
               bg-gray-800  pb-6 pt-4 rounded-lg leading-normal overflow-hidden">
       <div class="top mb-2 flex">
@@ -474,8 +473,61 @@
   </div>
 </script>
 
+</p>
 </div>
+</div>
+</div>
+<!---- BREADCRUMBS START ---->
+<div class="block">
+    <nav class="text-black font-bold my-8" aria-label="Breadcrumb">
+  <ol class="list-none p-0 inline-flex">
+    <li class="flex items-center">
+      <a href="#">Home</a>
+      <svg class="fill-current w-3 h-3 mx-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"/></svg>
+    </li>
+    <li class="flex items-center">
+      <a href="#">Second Level</a>
+      <svg class="fill-current w-3 h-3 mx-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"/></svg>
+    </li>
+    <li>
+      <a href="#" class="text-gray-500" aria-current="page">Third Level</a>
+    </li>
+  </ol>
+</nav>
 
+<!----- TERMINAL: BREADCRUMBS START ----->
+    <div class="w-1/2 h-32 overflow-scroll mx-20 mb-20">
+  <div class="coding inverse-toggle px-5 pt-4 shadow-lg text-gray-100 text-sm font-mono subpixel-antialiased 
+              bg-gray-800  pb-6 pt-4 rounded-lg leading-normal overflow-hidden">
+      <div class="top mb-2 flex">
+          <div class="h-3 w-3 bg-red-500 rounded-full"></div>
+          <div class="ml-2 h-3 w-3 bg-orange-300 rounded-full"></div>
+          <div class="ml-2 h-3 w-3 bg-green-500 rounded-full"></div>
+      </div>
+      <div class="mt-4 flex">
+          <span class="text-green-400">breadcrumbs:~$</span>
+          <p class="flex-1 typing items-center pl-2">
+                  <script type="text/plain"  style="display: block">
+                  <nav class="text-black font-bold my-8" aria-label="Breadcrumb">
+  <ol class="list-none p-0 inline-flex">
+    <li class="flex items-center">
+      <a href="#">Home</a>
+      <svg class="fill-current w-3 h-3 mx-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"/></svg>
+    </li>
+    <li class="flex items-center">
+      <a href="#">Second Level</a>
+      <svg class="fill-current w-3 h-3 mx-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"/></svg>
+    </li>
+    <li>
+      <a href="#" class="text-gray-500" aria-current="page">Third Level</a>
+    </li>
+  </ol>
+</nav>
+</script>
+              <br>
+          </p>
+      </div>
+  </div>
 
 
 
