add more typography

--- a/typography.html
+++ b/typography.html
@@ -107,22 +107,59 @@
 		</script>
 		<!---------END NAVIGATION ---------->
 		<div id="main-content" class="p-10 text-center">
-			<h1 class="text-5xl text-gray-700 pt-10"> Typography Components</h1>
+			<h1 class="text-5xl text-gray-700 pt-10"> Typography</h1>
 
-			<div class="font-1">
-			<p> A quick brown fox jumps over the lazy dog </p>
-			<h4> A quick brown fox jumps over the lazy dog </h4>
-			<h3> A quick brown fox jumps over the lazy dog </h3>
-			<h2> A quick brown fox jumps over the lazy dog </h2>
-			<h1> A quick brown fox jumps over the lazy dog </h1>
+			<div class="font-din py-20">
+				<h1> <span class="font-bold"> Din 2014 Bold </span> And Regular </h1>
+				<h2> A quick brown fox jumps over the lazy dog </h2>
+				<h3> A quick brown fox jumps over the lazy dog </h3>
+				<h4> A quick brown fox jumps over the lazy dog </h4>
+				<p> A quick brown fox jumps over the lazy dog </p>
 		</div>
-		<div class="font-2">
+
+		<div class="font-roc py-20">
+			<h1> <span class="font-bold"> Roc Grotesque Bold </span> And Regular  </h1>
+			<h2> A quick brown fox jumps over the lazy dog </h2>
+			<h3> A quick brown fox jumps over the lazy dog </h3>
+			<h4> A quick brown fox jumps over the lazy dog </h4>
 			<p class=""> A quick brown fox jumps over the lazy dog </p>
-			<h4> A quick brown fox jumps over the lazy dog </h4>
-			<h3> A quick brown fox jumps over the lazy dog </h3>
-			<h2> A quick brown fox jumps over the lazy dog </h2>
-			<h1> A quick brown fox jumps over the lazy dog </h1>
 		</div>
+
+		<div class="font-proxima-nova py-20">
+			<h1> <span class="font-bold"> Proxima Nova Bold </span> And Regular  </h1>
+			<h2> A quick brown fox jumps over the lazy dog </h2>
+			<h3> A quick brown fox jumps over the lazy dog </h3>
+			<h4> A quick brown fox jumps over the lazy dog </h4>
+			<p class=""> A quick brown fox jumps over the lazy dog </p>
+		</div>
+
+		<div class="font-gill-sans-nova py-20">
+			<h1> <span class="font-bold"> Gil Sans Nova Bold </span> And Regular  </h1>
+			<h2> A quick brown fox jumps over the lazy dog </h2>
+			<h3> A quick brown fox jumps over the lazy dog </h3>
+			<h4> A quick brown fox jumps over the lazy dog </h4>
+			<p class=""> A quick brown fox jumps over the lazy dog </p>
+		</div>
+
+		<div class="font-gill-jaf-lapture py-20">
+			<h1> <span class="font-bold"> JAF Lapture Bold </span> And Regular  </h1>
+			<h2> A quick brown fox jumps over the lazy dog </h2>
+			<h3> A quick brown fox jumps over the lazy dog </h3>
+			<h4> A quick brown fox jumps over the lazy dog </h4>
+			<p class=""> A quick brown fox jumps over the lazy dog </p>
+		</div>
+
+		<div class="font-gill-aktiv-grotesk py-20">
+			<h1> <span class="font-bold"> Aktiv Grotesk Bold </span> And Regular  </h1>
+			<h2> A quick brown fox jumps over the lazy dog </h2>
+			<h3> A quick brown fox jumps over the lazy dog </h3>
+			<h4> A quick brown fox jumps over the lazy dog </h4>
+			<p class=""> A quick brown fox jumps over the lazy dog </p>
+		</div>
+
+
+		
+
 
 
 		</div>
