--- a/alerts.html
+++ b/alerts.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="https://use.typekit.net/ggk0vlq.css">
 		<link rel="stylesheet" href="build/main.css">
 		<title> DeFi Design Kit</title>
-		<link rel="icon" href="img/plant.png" type="image/x-icon" />
+		<link rel="icon" href="img/favicon.png" type="image/x-icon" />
 		
 	</head>
 	<body class="">
