--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="https://use.typekit.net/ggk0vlq.css">
 		<link rel="stylesheet" href="build/main.css">
 		<title> DeFi Design Kit</title>
-		<link rel="icon" href="img/plant.png" type="image/x-icon" />
+		<link rel="icon" href="img/favicon.png" type="image/x-icon" />
 		
 	</head>
 	<body class="">
@@ -106,85 +106,13 @@
 		});
 		</script>
 		<!---------END NAVIGATION ---------->
-	
-		<!--------------- Modern Alert --------------->
-		<div class="text-center py-4 lg:px-4 d-inline-block">
-			<div class="p-2 bg-green-800 items-center text-indigo-100 leading-none lg:rounded-full flex lg:inline-flex" role="alert">
-				<span class="flex rounded-full bg-green-500 uppercase px-2 py-1 text-xs font-bold mr-3">New</span>
-				<span class="font-semibold mr-2 text-left flex-auto">Join The Discord</span>
-				<svg class="fill-current opacity-75 h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M12.95 10.707l.707-.707L8 4.343 6.586 5.757 10.828 10l-4.242 4.243L8 15.657l4.95-4.95z"/></svg>
-			</div>
-		</div>
-		<!--------------- New Label --------------->
-		<div class="text-center py-4 lg:px-4 inline-block">
-			<span class="flex rounded-full bg-green-500 text-white uppercase px-2 py-1 text-xs font-bold mr-3">New</span>
+
+		<div id="main-content" class="p-10 text-center">
+			<h1 class="text-5xl text-gray-700 pt-10"> Design Components for DeFi Applications </h1>
 		</div>
 
-		<!--------------- Pill Button  --------------->
-		<button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full">
-		Button
-		</button>
-		<!--------------- 3d Button  --------------->
-		<button class="bg-green-500 hover:bg-green-400 text-white font-bold py-2 px-4 border-b-4 border-green-700 hover:border-green-500 rounded">
-		Button
-		</button>
-		<!--------------- Button Groups  --------------->
-		<div class="inline-flex">
-			<button class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-l">
-			Prev
-			</button>
-			<button class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-r">
-			Next
-			</button>
-		</div>
 
-		<!--------------- Button with Icons --------------->
-		<button class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded inline-flex items-center">
-		<svg class="fill-current w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M13 8V2H7v6H2l8 8 8-8h-5zM0 18h20v2H0v-2z"/></svg>
-		<span>Download</span>
-		</button>
-
-
-<!--------------- Progress Bars --------------->
-<div class="pt-10 flex flex-col space-y-3 h-32">
-  <div class="relative w-full sm:w-1/2 bg-gray-200 rounded">
-    <div style="width: 60%" class="absolute top-0 h-4 rounded shim-green"></div>
-  </div>
- 
-  <div class="relative w-full sm:w-1/2 bg-gray-200 rounded">
-    <div style="width: 80%" class="absolute top-0 h-4 rounded shim-blue"></div>
-  </div>
-
-  <div class="relative w-full sm:w-1/2 bg-gray-200 rounded">
-    <div style="width: 100%" class="absolute top-0 h-4 rounded shim-red"></div>
-  </div>
-</div>
-
-
-<!------------ code snippet for progress bars --------------->
-<div class="w-1/3">
-  <div class="coding inverse-toggle p-3 shadow-lg text-gray-700 text-sm font-mono subpixel-antialiased
-    bg-gray-200 rounded-lg leading-normal overflow-hidden">
-    <p class="text-green-400 w-full">progress bars</p>
-    <div class="flex">
- 
-        <script type="text/plain"  style="display: block">
-
-        <div class="relative w-full sm:w-1/2 bg-gray-200 rounded">
-          <div style="width: 100%" class="absolute top-0 h-4 rounded shim-red"></div>
-        </div>
-        </script>
-      </code>
-    </div>
-  </div>
-
-
-
-
-<h4 class="pt-3"> Navigation </h4>
-<h3><a href="components/navigation.html">navigation </a></h3>
-<h3><a href="components/dark-nav.html">dark nav </a></h3>
-<h3><a href="components/breadcrumbs.html">bread crumbs </a></h3>
+		<h4> To be organized: </h4>
 
 <h4 class="pt-3"> Cards & Charts </h4>
 <h3><a href="components/stock-chart.html">Stock Chart </a></h3>
@@ -209,6 +137,11 @@
 <h3><a href="components/modal.html">modal </a></h3>
 <h3><a href="components/wireframe.html">Wireframe </a></h3>
 <h3><a href="components/terminal.html">Terminal </a></h3>
+
+<h4 class="pt-3"> Navigation </h4>
+<h3><a href="components/navigation.html">navigation </a></h3>
+<h3><a href="components/dark-nav.html">dark nav </a></h3>
+<h3><a href="components/breadcrumbs.html">bread crumbs </a></h3>
 
 
 
