--- a/googlefonts.html
+++ b/googlefonts.html
@@ -24,14 +24,14 @@
             display: inline-flex !important;
             }
             </style>
-            <nav class="flex items-center p-3 flex-wrap" style="background-color: #004982">
+            <nav class="flex items-center bg-gray-800 p-3 flex-wrap">
                 <a href="#" class="p-2 mr-4 inline-flex items-center">
                     <span class="text-xl text-white font-bold uppercase tracking-wide"
-                    >GG Design Prototype</span
+                    >DeFi Design Kit</span
                     >
                 </a>
                 <button
-                class="text-white inline-flex p-3 hover:bg-blue-900 rounded lg:hidden ml-auto hover:text-white outline-none nav-toggler"
+                class="text-white inline-flex p-3 hover:bg-gray-900 rounded lg:hidden ml-auto hover:text-white outline-none nav-toggler"
                 data-target="#navigation"
                 >
                 <i class="material-icons">menu</i>
@@ -45,29 +45,58 @@
                         >
                         <a
                             href="./index.html"
-                            class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-blue-900 hover:text-white"
+                            class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
                             >
-                            <span>Wireframe</span>
+                            <span>Home</span>
                         </a>
                         <a
-                            href="./typography.html"
-                            class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-blue-900 hover:text-white"
+                            href="./navigation.html"
+                            class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
                             >
-                            <span>Google Type</span>
+                            <span>Navigation</span>
                         </a>
                         <a
                             href="./typekit.html"
-                            class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-blue-900 hover:text-white"
+                            class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
                             >
-                            <span>Typekit Type</span>
+                            <span>Typekit</span>
                         </a>
                         <a
-                            href="./colors.html"
-                            class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-blue-900 hover:text-white"
+                            href="./googlefonts.html"
+                            class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
                             >
-                            <span>Colors</span>
+                            <span>Google Fonts</span>
                         </a>
-
+                        <a
+                            href="./analytics.html"
+                            class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+                            >
+                            <span>Analytics</span>
+                        </a>
+                        <a
+                            href="./icons.html"
+                            class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+                            >
+                            <span>Icons</span>
+                        </a>
+                        <a
+                            href="./forms.html"
+                            class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+                            >
+                            <span>Forms</span>
+                        </a>
+                        <a
+                            href="./buttons.html"
+                            class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+                            >
+                            <span>Buttons</span>
+                        </a>
+                        <a
+                            href="./alerts.html"
+                            class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+                            >
+                            <span>Alerts</span>
+                        </a>
                     </div>
                 </div>
             </nav>
