--- a/index.html
+++ b/index.html
@@ -53,10 +53,16 @@
 						<span>Navigation</span>
 					</a>
 					<a
-						href="./typography.html"
+						href="./typekit.html"
 						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
-						<span>Typography</span>
+						<span>Typekit</span>
+					</a>
+					<a
+						href="./googlefonts.html"
+						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+						>
+						<span>Google Fonts</span>
 					</a>
 					<a
 						href="./analytics.html"
