--- a/navigation.html
+++ b/navigation.html
@@ -54,16 +54,16 @@
 						<span>Navigation</span>
 					</a>
 					<a
-						href="./typography.html"
+						href="./typekit.html"
 						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
-						<span>Typography</span>
+						<span>Typekit</span>
 					</a>
 					<a
-						href="./analytics.html"
+						href="./googlefonts.html"
 						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
-						<span>Analytics</span>
+						<span>Google Fonts</span>
 					</a>
 					<a
 						href="./icons.html"
