sidebar light nav

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		display: inline-flex !important;
 		}
 		</style>
-		<nav class="flex items-center bg-gray-800 p-3 flex-wrap">
+		<nav class="flex items-center text-gray-700 p-3 flex-wrap">
 			<a href="#" class="p-2 mr-4 inline-flex items-center">
 				<span class="text-xl text-white font-bold uppercase tracking-wide"
 				>DeFi Design Kit</span
@@ -42,55 +42,55 @@
 					>
 					<a
 						href="./index.html"
-						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-700 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
 						<span>Home</span>
 					</a>
 					<a
 						href="./navigation.html"
-						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-700 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
 						<span>Navigation</span>
 					</a>
 					<a
 						href="./typekit.html"
-						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-700 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
 						<span>Typekit</span>
 					</a>
 					<a
 						href="./googlefonts.html"
-						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-700 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
 						<span>Google Fonts</span>
 					</a>
 					<a
 						href="./analytics.html"
-						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-700 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
 						<span>Analytics</span>
 					</a>
 					<a
 						href="./icons.html"
-						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-700 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
 						<span>Icons</span>
 					</a>
 					<a
 						href="./forms.html"
-						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-700 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
 						<span>Forms</span>
 					</a>
 					<a
 						href="./buttons.html"
-						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-700 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
 						<span>Buttons</span>
 					</a>
 					<a
 						href="./alerts.html"
-						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
+						class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-700 items-center justify-center hover:bg-gray-900 hover:text-white"
 						>
 						<span>Alerts</span>
 					</a>
@@ -112,7 +112,7 @@
 		</script>
 		<!---------END NAVIGATION ---------->
 
-		<div id="main-content" class="p-10 text-center">
+		<div id="main-content" class="p-10 h-screen text-center">
 			<h1 class="text-5xl text-gray-700 pt-10"> Design Components for DeFi Applications </h1>
 		</div>
 
